--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -47,10 +47,11 @@ install:
 build: off
 
 test_script:
+    - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
     - python .ci_support\build_all.py recipes --arch %PLATFORM%
 
     # copy any newly created conda packages into the conda_packages dir
     - cmd: mkdir conda_packages
     # Uncomment the following two lines to make any conda packages created
     # available as build artifacts in AppVeyor
-    #- cmd: 'copy /Y C:\Miniconda-x64\conda-bld\win-64\*.bz2 conda_packages || cmd /c "exit /b 0"'
+    #- cmd: 'copy /Y C:\bld\win-64\*.bz2 conda_packages || cmd /c "exit /b 0"'
