--- a/recipes/lfortran/meta.yaml
+++ b/recipes/lfortran/meta.yaml
@@ -18,17 +18,18 @@ requirements:
   build:
     - {{ compiler('c') }}
     - python
-    - setuptools
-    - scikit-build
     - cmake
     - ninja
   host:
     - python
     - pip
+    - scikit-build
+    - setuptools
   run:
     - python
     - llvmlite
     - antlr-python-runtime
+    - prompt_toolkit
 
 test:
   imports:
